# Blitzkrieg

./: .env.test  .gitignore  Dockerfile  Makefile  README.md  checks_pip_installs.py  clean_up_prepended_uuids.py  create_template.py  deployment.py  generate_dir.py  main.py  merge-plan.md  pyproject.toml  setup.py  test_link.sh
.docs/: personal_db.md
.docs/dev_journal/: create_issues_script_features_and_user_stories.md
.docs/diagrams/: create_issues.md  execute_issue_processing_workflow.md  handle_issue_files.md
.docs/extrapolation/: component_descriptions.md  data_flow.md  high_level_overview.md  scaling_and_performance_analysis.md  system_architecture.md  use_cases.md
.docs/issues/: change_issue_table_name_from_issues_to_issue.md  event_management_system.md  implement_readme_generation_with_gpt_assistant.md  issues_generation.md  issues_management_102.md  new_1.md  project_extrapolation.md  refactor_db_operations.md  test_issues.md  the_extended_problem_extended.md  title.md
.docs/learning/: sqlalchemy.md
.docs/prompts/: create_issues_user_flows.md
.docs/resume/: overview-1.md  sophistication.md
alembic/versions/: 40e22241d2d9_add_source_column_to_issue_table.py  e50771ce470e_changes_issues_table_name_to_issue.py
blitzkrieg/: alembic_manager.py  blitz_env_manager.py  cli_interface.py  cookie_cutter_manager.py  database_manager.py  docker_manager.py  file_manager.py  init_rust_ext.sh  main.py  pgadmin_manager.py  postgres_manager.py  workspace_directory_manager.py  workspace_manager.py
blitzkrieg/alembic_management/: alembic_command_runner.py  model_manager.py
blitzkrieg/api/: fastapi_app.py
blitzkrieg/class_instances/: blitz_env_manager.py  cookie_cutter_manager.py  docker_manager.py
blitzkrieg/cli/: cli_interface.py  inquiries.py  logging_config.py  main.py  step_by_steps.py  ui_utils.py
blitzkrieg/config/: get_config.py
blitzkrieg/db/: env.py
blitzkrieg/docker_management/: docker_compose_manager.py  dockerfile_manager.py
blitzkrieg/document_database_integration/: DocumentDatabaseIntegration.py
blitzkrieg/enums/: chat_message_sender_types.py  code_action.py  extrapolation_types.py  project_types_enum.py
blitzkrieg/error_handling/: ErrorManager.py
blitzkrieg/file_management/: DirectoryManager.py  FileManager.py  MarkdownManager.py  MarkdownParser.py
blitzkrieg/file_writers/: base_docker_compose_writer.py  base_dockerfile_writer.py  workspace_docker_compose_writer.py  workspace_dockerfile_writer.py
blitzkrieg/initialization/: create_pgadmin_server.py  load_config.py  main.py  print_connection_details.py  project_init.py
blitzkrieg/issue_management/: IssueManager.py  IssueProcessor.py
blitzkrieg/rust_codetextualizer/: Cargo.toml  pyproject.toml  rebuild.sh
blitzkrieg/rust_codetextualizer/src/: lib.rs
blitzkrieg/rust_function_contextualizer/rust_function_extractor/: Cargo.toml  pyproject.toml  rebuild.sh
blitzkrieg/rust_function_contextualizer/rust_function_extractor/python/rust_function_extractor/: __init__.py
blitzkrieg/rust_function_contextualizer/rust_function_extractor/python/tests/: test_all.py
blitzkrieg/rust_function_contextualizer/rust_function_extractor/src/: lib.rs
blitzkrieg/templates/: docker-compose-template.yml
blitzkrieg/templates/poetry-cli-template/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
blitzkrieg/templates/poetry-cli-template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
blitzkrieg/templates/poetry-cli-template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/: main.py
blitzkrieg/templates/pyo3-rust-extension-template/{{cookiecutter.project_slug}}/: .gitignore  Cargo.toml  README.md  pyproject.toml
blitzkrieg/templates/pyo3-rust-extension-template/{{cookiecutter.project_slug}}/src/: lib.rs
blitzkrieg/ui_management/: ConsoleInterface.py  CustomSpinner.py  ansi_helpers.py  console_instance.py  decorators.py  tui.py
blitzkrieg/utils/: action_utils.py  contextualization_utils.py  file_utils.py  git_utils.py  github_utils.py  issue_tracking_utils.py  llm_utils.py  poetry_utils.py  pr_tracking_utils.py  (+3 more)
cli/: main.py  user_input.py
config/: __init__.py
rundbfast/: cli.py  container_manager.py  manager.py
tests/: test_config.py  test_config_integration.py  test_config_units.py  test_ui.py
(+142 files in other folders)
