[package]
name = "rust_codetextualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_codetextualizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
rayon = "1.5"
walkdir = "2.3"
colored = "2.0"
tabled = "0.10"
regex = "1.5"
parking_lot = "0.12"
