[package]
name = "rust_function_extractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_function_extractor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
rayon = "1.5"
walkdir = "2.3.2"
indicatif = "0.17.0"
console = "0.15.0"
